--- a/addons/kh_approvals/views/approval_request_views.xml
+++ b/addons/kh_approvals/views/approval_request_views.xml
@@ -2,124 +2,68 @@
 <odoo>
   <data>
 
-    <!-- Line subview -->
-    <record id="view_kh_approval_line_list" model="ir.ui.view">
-      <field name="name">kh.approval.line.list</field>
-      <field name="model">kh.approval.line</field>
-      <field name="arch" type="xml">
-        <tree editable="bottom">
-          <field name="name"/>
-          <field name="approver_id"/>
-          <field name="required"/>
-          <field name="state"/>
-          <field name="note"/>
-        </tree>
-      </field>
+    <record id="action_kh_approval_requests_my_v2" model="ir.actions.act_window">
+      <field name="name">📝 My Requests</field>
+      <field name="res_model">kh.approval.request</field>
+      <field name="view_mode">list,form</field>
+      <field name="search_view_id" ref="kh_approvals.view_kh_approval_request_search"/>
+      <field name="domain">[('requester_id', '=', uid)]</field>
+      <field name="context">{'search_default_my_requests': 1}</field>
+      <field name="views" eval="[(ref('kh_approvals.view_kh_approval_request_list'), 'list'),
+                                 (ref('kh_approvals.view_kh_approval_request_form_base'), 'form')]"/>
     </record>
 
-    <!-- SEARCH view -->
-    <record id="view_kh_approval_request_search" model="ir.ui.view">
-      <field name="name">kh.approval.request.search</field>
-      <field name="model">kh.approval.request</field>
-      <field name="arch" type="xml">
-        <search>
-          <filter name="my_requests" string="My Requests" domain="[('requester_id','=',uid)]"/>
-          <!-- use computed boolean + state to avoid O2M traversal -->
-          <filter name="to_approve" string="To Approve"
-                  domain="[('is_current_user_approver','=',True), ('state','=','in_review')]"/>
-          <separator/>
-          <field name="state"/>
-          <field name="requester_id"/>
-          <field name="company_id" groups="base.group_multi_company"/>
-          <field name="department_id"/>
-          <field name="create_date" string="Created On"/>
-          <filter name="created_today" string="Today" domain="[('create_date', '>=', context_today())]"/>
-          <filter name="grp_state" string="Group by Status" context="{'group_by':'state'}"/>
-          <filter name="grp_dept" string="Group by Department" context="{'group_by':'department_id'}"/>
-        </search>
-      </field>
+    <record id="action_kh_approval_requests_to_approve_v2" model="ir.actions.act_window">
+      <field name="name">✅ To Approve</field>
+      <field name="res_model">kh.approval.request</field>
+      <field name="view_mode">list,form</field>
+      <field name="search_view_id" ref="kh_approvals.view_kh_approval_request_search"/>
+      <!-- keep action domain empty; filter is in the search view -->
+      <field name="context">{'search_default_to_approve': 1}</field>
+      <field name="views" eval="[(ref('kh_approvals.view_kh_approval_request_list'), 'list'),
+                                 (ref('kh_approvals.view_kh_approval_request_form_base'), 'form')]"/>
     </record>
 
-    <!-- LIST view -->
-    <record id="view_kh_approval_request_list" model="ir.ui.view">
-      <field name="name">kh.approval.request.list</field>
-      <field name="model">kh.approval.request</field>
-      <field name="arch" type="xml">
-        <tree default_order="create_date desc">
-          <field name="name"/>
-          <field name="requester_id"/>
-          <field name="amount"/>
-          <field name="currency_id"/>
-          <field name="company_id" groups="base.group_multi_company"/>
-          <field name="department_id"/>
-          <field name="create_date" string="Created On"/>
-          <field name="state"/>
-        </tree>
-      </field>
+    <record id="action_kh_approval_requests_all_v2" model="ir.actions.act_window">
+      <field name="name">📚 All Requests</field>
+      <field name="res_model">kh.approval.request</field>
+      <field name="view_mode">list,form</field>
+      <field name="search_view_id" ref="kh_approvals.view_kh_approval_request_search"/>
+      <field name="views" eval="[(ref('kh_approvals.view_kh_approval_request_list'), 'list'),
+                                 (ref('kh_approvals.view_kh_approval_request_form_base'), 'form')]"/>
     </record>
 
-    <!-- FORM view -->
-    <record id="view_kh_approval_request_form_base" model="ir.ui.view">
-      <field name="name">kh.approval.request.form</field>
-      <field name="model">kh.approval.request</field>
-      <field name="arch" type="xml">
-        <form string="Approval Request">
-          <header>
-            <button name="action_submit" type="object" string="Submit"
-                    class="oe_highlight"
-                    invisible="state != 'draft'"/>
-            <button name="action_approve_request" type="object" string="Approve"
-                    class="btn-primary"
-                    invisible="state != 'in_review' or not is_current_user_approver"/>
-            <button name="action_reject_request" type="object" string="Reject"
-                    class="btn-secondary"
-                    invisible="state != 'in_review' or not is_current_user_approver"/>
-            <button name="action_revise_request" type="object" string="Edit Request"
-                    class="btn-secondary"
-                    invisible="state == 'draft' or requester_id != uid"/>
-            <field name="state" widget="statusbar"
-                   statusbar_visible="draft,in_review,approved,rejected"/>
-          </header>
+    <menuitem id="menu_kh_approvals_root" name="Approvals" sequence="20"/>
 
-          <sheet>
-            <group>
-              <group>
-                <field name="name" required="1" readonly="state != 'draft'"/>
-                <field name="requester_id" readonly="1"/>
-                <field name="amount" readonly="state != 'draft'"/>
-                <field name="currency_id" readonly="state != 'draft'"/>
-                <field name="revision" readonly="1"/>
-                <field name="last_revised_by" readonly="1"/>
-                <field name="last_revised_on" readonly="1"/>
-              </group>
-              <group>
-                <field name="company_id" groups="base.group_multi_company" readonly="state != 'draft'"/>
-                <field name="department_id" readonly="state != 'draft'"/>
-                <field name="rule_id"
-                       readonly="state != 'draft'"
-                       domain="[('company_id','in',[False, company_id]), '|', ('department_id','=',False), ('department_id','=',department_id)]"
-                       options="{'no_create_edit': True}"/>
-              </group>
-            </group>
+    <menuitem id="menu_kh_approvals_my"
+              parent="menu_kh_approvals_root"
+              name="My Requests"
+              action="kh_approvals.action_kh_approval_requests_my_v2"
+              sequence="1"/>
 
-            <notebook>
-              <page string="Approval Steps" name="approval_steps">
-                <field name="approval_line_ids"
-                       context="{'default_request_id': id}"
-                       views="{'tree': 'kh_approvals.view_kh_approval_line_list'}"/>
-                <field name="steps_overview_html" widget="html"/>
-              </page>
-            </notebook>
-          </sheet>
+    <menuitem id="menu_kh_approvals_to_approve"
+              parent="menu_kh_approvals_root"
+              name="To Approve"
+              action="kh_approvals.action_kh_approval_requests_to_approve_v2"
+              sequence="2"/>
 
-          <chatter>
-            <field name="message_follower_ids"/>
-            <field name="activity_ids"/>
-            <field name="message_ids"/>
-          </chatter>
-        </form>
-      </field>
-    </record>
+    <menuitem id="menu_kh_approvals_all"
+              parent="menu_kh_approvals_root"
+              name="All Requests"
+              action="kh_approvals.action_kh_approval_requests_all_v2"
+              sequence="3"/>
+
+    <!-- Existing actions assumed to exist -->
+    <menuitem id="menu_kh_approvals_rules"
+              name="Rules"
+              parent="menu_kh_approvals_root"
+              action="kh_approvals.action_kh_approval_rules"
+              sequence="40"/>
+    <menuitem id="menu_kh_departments"
+              name="Departments"
+              parent="menu_kh_approvals_root"
+              action="kh_approvals.action_kh_departments"
+              sequence="50"/>
 
   </data>
 </odoo>
