--- a/addons/kh_approvals/views/department_views.xml
+++ b/addons/kh_approvals/views/department_views.xml
@@ -1,59 +1,42 @@
-<?xml version="1.0" encoding="utf-8"?>
 <odoo>
   <data>
-
-    <!-- Department: search -->
-    <record id="view_kh_department_search" model="ir.ui.view">
-      <field name="name">kh.approvals.department.search</field>
-      <field name="model">kh.approvals.department</field>
-      <field name="arch" type="xml">
-        <search>
-          <field name="name"/>
-          <field name="company_id" groups="base.group_multi_company"/>
-          <separator/>
-          <filter string="Group by Company" context="{'group_by':'company_id'}"/>
-        </search>
-      </field>
-    </record>
-
-    <!-- Department: list -->
-    <record id="view_kh_department_list" model="ir.ui.view">
+    <!-- Department list -->
+    <record id="view_kh_departments_list" model="ir.ui.view">
       <field name="name">kh.approvals.department.list</field>
       <field name="model">kh.approvals.department</field>
       <field name="arch" type="xml">
         <list>
           <field name="name"/>
-          <field name="company_id" groups="base.group_multi_company"/>
+          <field name="company_id"/>
+          <field name="active"/>
         </list>
       </field>
     </record>
 
-    <!-- Department: form -->
-    <record id="view_kh_department_form" model="ir.ui.view">
+    <!-- Department form -->
+    <record id="view_kh_departments_form" model="ir.ui.view">
       <field name="name">kh.approvals.department.form</field>
       <field name="model">kh.approvals.department</field>
       <field name="arch" type="xml">
         <form string="Department">
           <sheet>
             <group>
-              <field name="name"/>
-              <field name="company_id" groups="base.group_multi_company"/>
+              <group>
+                <field name="active"/>
+                <field name="name" required="1"/>
+                <field name="company_id"/>
+              </group>
             </group>
           </sheet>
         </form>
       </field>
     </record>
 
-    <!-- Action (uses LIST, not tree) -->
+    <!-- Department action -->
     <record id="action_kh_departments" model="ir.actions.act_window">
       <field name="name">Departments</field>
       <field name="res_model">kh.approvals.department</field>
       <field name="view_mode">list,form</field>
-      <field name="search_view_id" ref="kh_approvals.view_kh_department_search"/>
-      <field name="views" eval="[(ref('kh_approvals.view_kh_department_list'),'list'),
-                                 (ref('kh_approvals.view_kh_department_form'),'form')]"/>
-      <field name="context">{}</field>
     </record>
-
   </data>
 </odoo>
