--- a/addons/kh_approvals/views/approval_request_views.xml
+++ b/addons/kh_approvals/views/approval_request_views.xml
@@ -93,6 +93,7 @@
                 <field name="revision" readonly="1"/>
                 <field name="last_revised_by" readonly="1"/>
                 <field name="last_revised_on" readonly="1"/>
+                <field name="submitted_on" readonly="1"/>
               </group>
               <group>
                 <field name="company_id" groups="base.group_multi_company" readonly="state != 'draft'"/>
