--- a/addons/kh_approvals/views/mail_activity_views.xml
+++ b/addons/kh_approvals/views/mail_activity_views.xml
@@ -4,31 +4,21 @@
     <field name="model">mail.activity</field>
     <field name="inherit_id" ref="mail.mail_activity_view_form_popup"/>
     <field name="arch" type="xml">
-      <xpath expr="//form" position="inside">
-        <div groups="base.group_user" invisible="1">
-          <!--
-            For an assignee who is NOT the creator:
-            - Hide the "Cancel" (unlink) button.
-            - Make key fields read-only to prevent editing.
-            - Hide the "Edit" button in the footer.
-            The user can still "Mark as Done" or "Done & Schedule Next".
-          -->
-          <xpath expr="//footer//button[@name='action_close_dialog']" position="attributes">
-            <attribute name="attrs">{'invisible': ['&amp;', ('user_id', '=', uid), ('create_uid', '!=', uid)]}</attribute>
-          </xpath>
-          <xpath expr="//footer//button[@name='unlink']" position="attributes">
-            <attribute name="attrs">{'invisible': ['&amp;', ('user_id', '=', uid), ('create_uid', '!=', uid)]}</attribute>
-          </xpath>
-          <xpath expr="//field[@name='summary']" position="attributes">
-            <attribute name="attrs">{'readonly': ['&amp;', ('user_id', '=', uid), ('create_uid', '!=', uid)]}</attribute>
-          </xpath>
-          <xpath expr="//field[@name='note']" position="attributes">
-            <attribute name="attrs">{'readonly': ['&amp;', ('user_id', '=', uid), ('create_uid', '!=', uid)]}</attribute>
-          </xpath>
-          <xpath expr="//field[@name='date_deadline']" position="attributes">
-            <attribute name="attrs">{'readonly': ['&amp;', ('user_id', '=', uid), ('create_uid', '!=', uid)]}</attribute>
-          </xpath>
-        </div>
+
+      <!-- Hide the Cancel (unlink) button when current user is assignee but not creator -->
+      <xpath expr="//footer//button[@name='unlink']" position="attributes">
+        <attribute name="attrs">{'invisible': ['&', ('user_id','=',uid), ('create_uid','!=',uid)]}</attribute>
+      </xpath>
+
+      <!-- Make key fields read-only for assignee who isn't the creator -->
+      <xpath expr="//field[@name='summary']" position="attributes">
+        <attribute name="attrs">{'readonly': ['&', ('user_id','=',uid), ('create_uid','!=',uid)]}</attribute>
+      </xpath>
+      <xpath expr="//field[@name='note']" position="attributes">
+        <attribute name="attrs">{'readonly': ['&', ('user_id','=',uid), ('create_uid','!=',uid)]}</attribute>
+      </xpath>
+      <xpath expr="//field[@name='date_deadline']" position="attributes">
+        <attribute name="attrs">{'readonly': ['&', ('user_id','=',uid), ('create_uid','!=',uid)]}</attribute>
       </xpath>
 
     </field>
