--- a/addons/kh_approvals/views/approval_request_views.xml
+++ b/addons/kh_approvals/views/approval_request_views.xml
@@ -125,9 +125,7 @@
                 <label for="department_id"/>
                 <div class="o_row">
                   <i class="fa fa-sitemap text-muted me-2"/>
-                  <field name="department_id"
-                         readonly="state != 'draft'"
-                         options="{'no_create_edit': True}"/>
+                  <field name="department_id" readonly="state != 'draft'"/>
                 </div>
                 <field name="rule_id"
                        readonly="state != 'draft'"
